--- a/bootcamp/templates/base.html
+++ b/bootcamp/templates/base.html
@@ -45,7 +45,8 @@
                 <li class="dropdown" >
                   <a href="#" data-toggle="dropdown" class="dropdown-toggle">{% trans 'Projects' %}</a>
                       <ul class="dropdown-menu">
-                        <li><a href="{% url 'projects' %}">View all projects</a></li>
+                        <li><a href="{% url 'search_projects' %}">Search</a></li>
+                        <li><a href="{% url 'projects' %}">View all</a></li>
                         <li><a href="{% url 'write' %}">Add a project</a></li>
                       </ul>
                 </li>
