--- a/bootcamp/devices/templates/devices/devices.html
+++ b/bootcamp/devices/templates/devices/devices.html
@@ -30,7 +30,7 @@
 	<script type="text/javascript" class="init">
 	
 $(document).ready(function() {
-	$('#example').DataTable();
+	$('#device_table').DataTable();
 } );
 
 	</script>
@@ -60,17 +60,10 @@ $(document).ready(function() {
       <section class="devices">
       <br><br>
       {% if devices|length != 0 %}
-      	<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
-      <thead>
+      	<table id="device_table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+      <thead style="display: none;">
             <tr>
                 <th>Name</th>
-                <th>Short Description</th>
-                <th>Collaborators</th>
-                <th>Tags</th>
-                <th>Created By</th>
-                <th>Last Modified</th>
-                <th>Comments</th>
-                <th><span class="glyphicon glyphicon-pencil"></span></th>
             </tr>
         </thead>
         <tbody>
