--- a/bootcamp/devices/templates/devices/partial_device_table.html
+++ b/bootcamp/devices/templates/devices/partial_device_table.html
@@ -1,19 +1,20 @@
 <tr>
-  <td><a href="{% url 'device' device.slug %}">{{ device.name |truncatewords:10}}</a></td>
+<td>
+  <a href="{% url 'device' device.slug %}">{{ device.name |truncatewords:10}}</a>
   <div class="info">
   	
-  	<td><div id="inline" href="#device_{{ device.id}}" class="clickable">
+  	<div id="inline" href="#device_{{ device.id}}" class="clickable">
     {{ device.get_description_as_markdown|safe|truncatewords:10 }}
   </div>
         <div style="display:none">
             <div id="device_{{ device.id}}">{{ device.get_description_as_markdown|safe }}</div>
     </div>
-    </td>
+    
   
-  <td><div class="content">
+  <div class="content">
     {{ device.get_collaborators_comma_delimited }}
-  </div></td>
-  <td>
+  </div>
+  
   {% if device.get_tags %}
     <div class="tags">
       {% for tag in device.get_tags %}
@@ -21,30 +22,30 @@
       {% endfor %}
     </div>
   {% endif %}
- </td>
- <td>
+ 
+ 
  <span class="user_image">
       <a href="{% url 'profile' device.create_user.username %}"><img width="40px" border-radius="20px" src="{{ device.create_user.profile.get_picture }}" alt="Profile Image"></a><br/>
       <a href="{% url 'profile' device.create_user.username %}">{{ device.create_user.profile.get_screen_name }}</a>
     </span>
-   </td>
+   
  
   
-    <td><span class="date">
+    <span class="date">
       <span class="glyphicon glyphicon-calendar"></span>
       {{ device.create_date }}
-    </span></td>
+    </span>
     
-    <td><span class="comments">
+    <span class="comments">
       <span class="glyphicon glyphicon-comment"></span>
       {{ device.get_comments.count }} Comments
-    </span></td>
-    <td>
+    </span>
+    
     <span class="edit">
       <a href="{% url 'edit_device' device.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     </span>
-    </td>
+    
   </div>
-  
+  </td>
   
 </tr>
