--- a/bootcamp/projects/templates/projects/project.html
+++ b/bootcamp/projects/templates/projects/project.html
@@ -106,6 +106,7 @@
                 </div>
             </div>
             <div class="row">
+                {% if repository %}
                 <div id="repository">
                     <h2>Repository</h2>
                     {% if repository.ela_directory_link %}
@@ -116,6 +117,7 @@
                         <img src="{% static 'img/' %}/{{ repository.logo }}" class="img-logo"/>
                     </a>
                 </div>
+                {% endif %}
             </div>
         </div>
         <div class="col-md-4">
