--- a/bootcamp/core/templates/core/profile.html
+++ b/bootcamp/core/templates/core/profile.html
@@ -62,7 +62,7 @@
                     <br/>
                   {% for link in page_user.profile.get_links %}
                     <span>
-                        <a href="{{ link.url }}" target="_blank"><img class="img-logo" src="{% static 'img/' %}{{link.logo}}" alt="{{ link.name }}"></a>
+                        <a href="{{ link.url }}" target="_blank"><img class="img2-logo" src="{% static 'img/' %}{{link.logo}}" alt="{{ link.name }}"></a>
                     </span>
                   {% endfor %}
                 </ul>
